[package]
name = "advent_of_code_2024"
version = "0.1.0"
edition = "2021"

[features]
default = ["Day12"]
Day01 = []
Day02 = []
Day03 = ["dep:regex"]
Day04 = []
Day05 = []
Day06 = []
Day07 = []
Day08 = ["dep:itertools"]
Day09 = []
Day10 = []
Day11 = []
Day12 = []

[dependencies]
regex = {version = "1.11.1", optional = true}
itertools = {version = "0.14.0", optional = true}
